syntax = "proto3";

option go_package = "reece.ooo/flowright";

package proxy;

import "routing.proto";

service Proxy {
    rpc GetInfo(Empty) returns (ProxyInfo);
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
    rpc CreateOrUpdateRoute(routing.RoutingMap) returns (routing.RoutingRule);
    rpc CreateEnvironment(routing.EnvironmentCreateRequest) returns (routing.EnvironmentCreateResponse);
    // TODO
    rpc DeleteEnvironment(routing.EnvironmentDeleteRequest) returns (routing.EnvironmentDeleteResponse);
    rpc ListEnvironments(routing.EnvironmentListRequest) returns (routing.EnvironmentListResponse);
}

message Empty {}

message ProxyInfo {
    string name = 1;
    string host = 2;
    uint32 grpc_port = 3;
    uint32 proxy_port = 4;
    string version = 5;
}

message HeartbeatRequest {}

message HeartbeatResponse {}
